--- a/assets/index.html
+++ b/assets/index.html
@@ -52,11 +52,9 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->
-    <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png"> -->
-    <!-- <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png"> -->
-    <!-- <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png"> -->
-    <!-- <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png"> -->
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/top_hat.png" title="Ringleader" />
+    <link rel="fluid-icon" href="/top_hat.png" title="Ringleader" />
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   </head>
