Add row stripes for visibility

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,8 +13,7 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the top bar */
       }
       .app {
-        padding-bottom: 5px;
-        margin-bottom: 5px;
+        padding: 5px 0px;
         border-bottom: 1px solid #CCC;
         clear: both;
       }
@@ -45,6 +44,9 @@
       .bar {
         background-color: #AAA !important;
       }
+      .app:nth-child(odd) { background-color:#eee; }
+      .app:nth-child(even) { background-color:#fff; }
+
     </style>
     <link href="/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 
