Add zebra stripes to app table for visibility
Tweaked version of Dan Rabinowitz' change. Closes #10.

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,8 +13,7 @@
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the top bar */
       }
       .app {
-        padding-bottom: 5px;
-        margin-bottom: 5px;
+        padding: 5px 0;
         border-bottom: 1px solid #CCC;
         clear: both;
       }
@@ -34,6 +33,9 @@
       }
       .app .buttons {
         text-align: right;
+      }
+      .app:nth-child(even) {
+        background-color: #eeeeee;
       }
       .loading {
         padding-top: 5px;
